--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -30,7 +30,7 @@
             </div>
         </header>
         <main>
-            <form action="/save-classes" id="create-class" method="post">
+            <form action="/save-classes" id="create-class" method="POST">
                 <fieldset>
                     <legend>Seus dados</legend>
                     <div class="input-block">
