--- a/src/views/study.html
+++ b/src/views/study.html
@@ -25,9 +25,12 @@
                     <div class="select-block">
                         <label for="subject">Matéria</label>
                         <select name="subject" id="subject">
-                            <option value="" disabled="" hidden="">Selecione uma opção</option>
+                            <option>Selecione uma opção</option>
+
                             {%for subject in subjects %}
-                            <option value="{{loop.index}}" {{"selected" if filters.subject == loop.index}}>{{subject}}</option>
+                                <option value="{{loop.index}}" {{ "selected" if filters.subject == loop.index }} >
+                                    {{subject}}
+                                </option>
                             {%endfor%}
                         </select>
                     </div>
@@ -35,8 +38,10 @@
                         <label for="weekday">Dia da semana</label>
                         <select name="weekday" id="weekday">
                             <option value="" disabled="" hidden="">Selecione uma opção</option>
-                            {%for weekday in weekdays %}
-                            <option value="{{loop.index0}}" {{"selected" if filters.weekday == loop.index0}}>{{weekday}}</option>
+                            {%for weekday in weekdays%}
+                            <option value="{{loop.index0}}" {{ "selected" if filters.weekday == loop.index0 }} >
+                                {{weekday}}
+                            </option>
                             {%endfor%}
                         </select>
                     </div>
@@ -50,16 +55,16 @@
         </header>
         <main>
             
-            {% if proffys == "" %} <!--condição caso o filtro não encontre os dados que o usuário solicitou-->
+            {%if proffys == ""%} <!--condição caso o filtro não encontre os dados que o usuário solicitou-->
             <p class="no-results"> Nenhum professor foi encontrado com a sua pesquisa.</p>
 
-            {% else %}
+            {%else%}
             
                 {%for proffy in proffys %}
                     <article class="teacher-item">
                         <header>
                             <img src="{{proffy.avatar}}" 
-                            alt="{{proffy.name}}">
+                                alt="{{proffy.name}}">
                             <div>
                                 <strong>{{proffy.name}}</strong>
                                 <span>{{proffy.subject}}</span>
@@ -67,7 +72,7 @@
                         </header>
                         <p>{{proffy.bio}}</p>
                             <footer>
-                                <p>Preço/hora<strong>R$20,00</strong></p>
+                                <p>Preço/hora<strong>R$ {{proffy.cost}}</strong></p>
                                 <a href="https://api.whatsapp.com/send?1=pt_BR&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
                                 <img src="/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato</a>
                             </footer>
